Written the Documentation in the Simple_RNN.ipynb

--- a/Simple_RNN.ipynb
+++ b/Simple_RNN.ipynb
@@ -2525,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6e419871",
    "metadata": {},
    "outputs": [
@@ -2541,14 +2541,30 @@
    "source": [
     "## Train simple RNN\n",
     "model=Sequential()\n",
-    "## Embedding layer: max_features= 10000 which is vocabulary size , 128 is the dimention(HL), max_length is the sentence length\n",
-    "model.add(Embedding(max_features,128,input_length=max_len))\n",
+    "## Embedding layer: max_features= 10000 which is vocabulary size ,output_dim=the embedding vector, max_length is the sentence length\n",
+    "model.add(Embedding(input_dim=max_features,output_dim=128,input_length=max_len))\n",
     "model.build(input_shape=(None, max_len))\n",
     "model.add(SimpleRNN(\n",
     "    128,\n",
     "    activation='relu'\n",
     "))\n",
     "model.add(Dense(1,activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38167eac",
+   "metadata": {},
+   "source": [
+    "IN EMBEDDING LAYER\n",
+    "\n",
+    "input_dim=max_features (10000): This sets the vocabulary size. The layer expects input integers (tokens) ranging from 0 to 9999 (inclusive). Any value outside this range would cause an error.  \n",
+    "\n",
+    "output_dim=128: This defines the dimensionality of the output embedding vectors. Each input token will be mapped to a dense vector of 128 floating-point number  \n",
+    "\n",
+    "input_length=max_len (500): This specifies the expected length of each input sequence. It helps Keras infer the input shape as (batch_size, 500), where batch_size is flexible (e.g., 32 during training).  \n",
+    "\n",
+    "At t=1 the 128 embedding vector is connected to the RNN HL1 then unfold mechanism will occur for t= end "
    ]
   },
   {
@@ -2740,6 +2756,80 @@
     "## save model file\n",
     "model.save(\"Simple_RNN_imdb.h5\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9348431f",
+   "metadata": {},
+   "source": [
+    "Example Scenario\n",
+    "\n",
+    "Step 1: Words and Initial Random Embeddings\n",
+    "\n",
+    "Suppose we have 4 words in our tiny vocabulary:\n",
+    "\n",
+    "Word\tInitial Random Embedding (4D)\n",
+    "good\t[0.10, -0.20, 0.50, 0.30]\n",
+    "great\t[-0.05, 0.40, 0.10, 0.25]\n",
+    "bad\t[0.50, -0.30, -0.10, 0.05]\n",
+    "poor\t[0.40, -0.25, 0.05, -0.10]\n",
+    "\n",
+    "These vectors are random at first, so no meaningful relationship yet.\n",
+    "\n",
+    "Step 2: Forward Pass through RNN\n",
+    "\n",
+    "Suppose our task is sentiment classification (positive/negative).\n",
+    "\n",
+    "Sentence examples:\n",
+    "\n",
+    "[good, great] → Positive\n",
+    "\n",
+    "[bad, poor] → Negative\n",
+    "\n",
+    "Embeddings feed into RNN:\n",
+    "\n",
+    "t=1: RNN sees embedding of first word\n",
+    "\n",
+    "t=2: RNN sees embedding of second word + hidden state from t=1\n",
+    "\n",
+    "Step 3: Backpropagation Updates\n",
+    "\n",
+    "The model predicts output and computes loss.\n",
+    "\n",
+    "Gradients flow back to embeddings.\n",
+    "\n",
+    "Words appearing in similar contexts get nudged closer together.\n",
+    "\n",
+    "After a few updates, embeddings might evolve like this:\n",
+    "\n",
+    "Word\tUpdated Embedding (4D)\n",
+    "good\t[0.12, 0.00, 0.55, 0.35]\n",
+    "great\t[0.10, 0.05, 0.50, 0.30]\n",
+    "bad\t[0.45, -0.25, -0.05, 0.00]\n",
+    "poor\t[0.40, -0.20, 0.00, -0.05]\n",
+    "\n",
+    "Notice how “good” and “great” vectors moved closer.\n",
+    "\n",
+    "“bad” and “poor” vectors also moved closer, forming a “negative cluster.”\n",
+    "\n",
+    "Semantic similarity emerges automatically from the task’s gradients.\n",
+    "\n",
+    "Step 4: Result\n",
+    "\n",
+    "After full training, embedding vectors capture meaningful relations:\n",
+    "\n",
+    "Positive words → close in vector space\n",
+    "\n",
+    "Negative words → close in vector space\n",
+    "\n",
+    "Positive vs Negative → far apart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed3b441",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
